ourlibrary-chart/templates/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongo
spec:
  clusterIP: None # this line is what makes it a *Headless* service!
  ports:
    - port: 27017
      name: mongo
  selector:
    app: mongo
