ourlibrary-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ourlib-ingress
spec:
  rules:
    - host: ourlib.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ourlib-service
                port:
                  number: 8000
  defaultBackend:
    service:
      name: ourlib-service
      port:
        number: 8000
